# sf-public-record

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Plans /: Original_Thesis.md
backend/: __init__.py
backend/planlens/: __init__.py  cli.py  config.py  db.py
backend/planlens/api/: __init__.py  deps.py  main.py  routes_dashboard.py  routes_hearings.py  routes_search.py  schemas.py
backend/planlens/crawl/: __init__.py  cpc_archive.py  downloader.py  models.py  supporting_pages.py
backend/planlens/embed/: __init__.py  embeddings.py
backend/planlens/parse/: __init__.py  agenda_parser.py  chunker.py  pdf_text.py
backend/planlens/search/: __init__.py  hybrid.py
backend/planlens/sql/: 001_init.sql  002_indexes.sql
backend/planlens/tests/: test_agenda_parser.py  test_api.py  test_archive_crawler.py  test_chunker.py  test_downloader.py  test_embeddings.py  test_hybrid_search.py  test_pdf_text.py  test_supporting_pages.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hearings/: page.tsx
frontend/app/hearings/[hearingId]/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: AppShell.tsx  Bars.tsx  DashboardView.tsx  HearingTable.tsx  MetricCard.tsx
frontend/lib/: api.ts  types.ts
