[project]
name = "planlens-sf"
version = "0.1.0"
description = "Local-first civic document intelligence for SF Planning Commission materials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.1.3",
    "httpx>=0.27.2",
    "typer>=0.12.5",
]

[project.scripts]
planlens = "backend.planlens.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/planlens/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
src = ["backend"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
