[project]
name = "sf-public-record"
version = "0.1.0"
description = "AI-assisted accountability for San Francisco planning records."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.1.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pymupdf>=1.24.14",
    "typer>=0.12.5",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
sf-public-record = "backend.planlens.cli:app"
planlens = "backend.planlens.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/planlens/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
src = ["backend"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
